[package]
name = "remcord-exchange-server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0"
actix-session = "0.5"
oauth2 = "4.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ttl_cache = "0.5"
